fixed some stylings on social-icons #49 - removed extra margin on social-icons - fixed coding convention

--- a/less/modules/_buildBy.less
+++ b/less/modules/_buildBy.less
@@ -1,9 +1,10 @@
 .buildBy-socialList {
   .list-unstyled;
+  margin: 0 -.25rem;
 
   > li {
     display: inline-block;
-    margin: 0 0.25rem;
+    margin: 0 .25rem;
     width: 3rem;
 
   }
@@ -11,14 +12,13 @@
   svg {
     fill: @color;
     height: 3rem;
-
     transition: fill .3s, transform .3s;
 
     &:hover {
       fill: @color-primary;
       transform: scale(1.1);
     }
+
   }
+
 }
-
-
